<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sad_puppy_drawing"/>

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_margin="8dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_below="@id/greeting"
        android:layout_margin="8dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/yo_te_quiero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text4"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/yo_te_quiero"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:text="@string/text3"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:layout_below="@id/message_body"
        android:layout_alignParentRight="true"
        android:textSize="19sp"/>




</RelativeLayout>
